[fix] fixes camelCase dto and unfollow user inmutable list and remove unnecesary logs